samples/_failures_safe/1761320934_62d98e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69a6b329.c: In function ‘main’:
./samples/SAFE/__tmp_69a6b329.c:153:9: error: expected expression at end of input
  153 |         if (strcmp(level_choice,
      |         ^~
./samples/SAFE/__tmp_69a6b329.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_69a6b329.c:153:9: error: expected declaration or statement at end of input
